project/test/syntax/bad/Bad10.ty
singleton class RandomGenerator { 
    
    functions: {
        generate: () -> Int = 
            this.nextInt
            3
        
        nextInt: () -> Int = 37732
    }
}
